<resources>
    <string name="app_name">Time Turkey</string>
    <string name="apps_buenas">Aplicaciones Positivas</string>
    <string name="apps_malas">Aplicaciones Negativas</string>
    <string name="es_positiva">Es positiva</string>
    <string name="es_negativa">Es negativa</string>
    <string name="esta_en_otra_lista">Está en otra lista</string>
    <string name="toast_mostrando_apps_sistema">Mostrando aplicaciones del sistema</string>
    <string name="toast_ocultando_apps_sistema">Ocultando aplicaciones del sistema</string>
    <string name="switch_en_esta_lista">Incluir en lista</string>
    <string name="string_tipo_lista_positiva">lista positiva</string>
    <string name="string_tipo_lista_negativa">lista negativa</string>
    <string name="string_tipo_lista_ninguna">ninguna lista</string>
    <string name="explicacion_necesita_permiso_uso">Esta aplicación necesita acceso al tiempo de uso</string>
    <string name="explicacion_mensaje_permiso_uso">Este permiso es necesario para poder saber el tiempo que pasas en aplicaciones asignadas como "positivas" y "negativas". Los datos se almacenan localmente y no son transmitidos fuera de la app excepto si escoges exportarlos desde la configuración a un archivo txt para compartirlos con otra aplicación. En el menú correspondiente activa esta aplicación para poder acceder a los datos de uso.</string>
    <string name="explicacion_necesita_permiso_alertas">Esta aplicación necesita mostrarse sobre otras apps</string>
    <string name="explicacion_mensaje_permiso_alertas">Este permiso es necesario para mostrar la pantalla de "bloqueo" sobre otras apps cuando hayas excedido el tiempo de uso de aplicaciones negativas. Activa esta aplicación en el menú correspondiente.</string>
    <string name="confirmacion_si_es_positiva">¿Seguro que debes fomentar el uso de esta app?</string>
    <string name="confirmacion_no_es_negativa">¿Seguro que no debes ganarte poder usar esta app?</string>
    <string name="aceptar">Aceptar</string>
    <string name="rechazar">Rechazar</string>
    <string name="ver_tiempo_positivo">Ver tiempo positivo</string>
    <string name="ver_tiempo_negativo">Ver tiempo negativo</string>
    <string name="descripcion_servicio_watchdog">Este servicio es necesario para ColdTurkeyYourself identificar correctamente el tiempo utilizado en aplicaciones positivas y negativas</string>
    <string name="titulo_notificacion_servicio">ColdTurkeyYourself</string>
    <string name="content_notificacion_servicio">En reposo</string>
    <string name="ticker_notificacion_servicio">Ticker en reposo</string>
    <string name="content_notificacion_neutra">Aplicación neutral: </string>
    <string name="ticker_notificacion_neutra">Ticker aplicación neutral</string>
    <string name="content_notificacion_negativa">Aplicación negativa: </string>
    <string name="ticker_notificacion_negativa">restando tiempo</string>
    <string name="content_notificacion_positiva">Aplicación positiva: </string>
    <string name="ticker_notificacion_positiva">sumando tiempo</string>
    <string name="y_restando_tiempo"> y restando tiempo</string>
    <string name="y_sumando_tiempo"> y sumando tiempo</string>
    <string name="switch_service">Activar servicio de vigilancia de apps</string>
    <string name="boton_configuracion">Configuración</string>
    <string name="escoger_archivo">Escoger archivo</string>
    <string name="compartir_tiempo_a_archivo">Compartir tiempo a archivo TXT</string>
    <string name="no_hay_archivo">No hay archivo</string>
    <string name="leer_tiempos_externos">Leer tiempos de archivos externos TXT</string>
    <string name="anhadir_archivo">Añadir archivo</string>
    <string name="block_screen_message">El pavo te vigila\nhora de volver al trabajo</string>
    <string name="boton_desbloquea">¡Vamos!</string>
    <string name="tiempo_restante_para_bloqueo">Quedan: </string>
    <string name="imagen_de_pavo">Imagen de un pavo</string>
    <string name="app_positiva_detectada">Buena</string>
    <string name="app_negativa_detectada">Mala</string>
    <string name="app_neutral_detectada">Neutral</string>
    <string name="ver_tiempos_consumidos">Ver tiempos</string>
    <string name="tiempo_restante_00">Tiempo Restante: 00:00:00</string>
    <string name="tiempo_restante">Tiempo Restante: </string>
    <string name="apk_cool_your_turkey_preference_file_key">apk.cool.your.turkey.PREFERENCE_FILE_KEY</string>
    <string name="minutos_entre_sincronizaciones">Minutos entre sincronizaciones de los archivos txt</string>
    <string name="simbolo_menos">-</string>
    <string name="simbolo_mas">+</string>
    <string name="minutos_trabajo_vs_minutos_ocio">¿Cuántos minutos debes trabajar para obtener 1 minuto de ocio?</string>
    <string name="comenzar_avisar_tiempo_restante_minutos">Comenzar a avisar del tiempo restante cuando falten ... minutos</string>
    <string name="dialogo_titulo_reducir_proporcion">Reducir proporción</string>
    <string name="dialogo_mensaje_reducir_proporcion">La proporción recomendada es de 4 a 1, como pomodoro. ¿estás seguro de que quieres bajarla?</string>
    <string name="espera_activada">Espera activada</string>
    <string name="espera_desactivada">Espera desactivada</string>
    <string name="tiempo_de_gracia_explicacion">Tiempo de gracia en opciones sensibles ante momentos de debilidad.</string>
    <string name="desactivar_el_tiempo_de_gracia_titulo_dialogo">Desactivar tiempo de gracia</string>
    <string name="tiempo_de_gracia_explicacion_dialogo">El tiempo de gracia es un tiempo de espera que ayuda a tu mente a valorar mejor esas situaciones en las que la tentación nos puede, ¿estás seguro de que deseas desactivarlo?</string>
    <string name="no_avisar">No me avises</string>
    <string name="si_avisar">Avísame</string>
    <string name="text_aviso_cambio_neutral_buena_mala">Recibe un breve aviso cuando cambias entre actividades positivas, negativas o neutrales.</string>
    <string name="texto_toque_de_queda_desde">Horario de toque de queda, todas las apps restan puntos, apps malas son bloqueadas.</string>
    <string name="guion"> - </string>
    <string name="cero_horas">00:00</string>
    <string name="avisame_cuando_estemos_llegando_al_toque_de_queda">Avísame cuando estemos llegando al toque de queda.</string>
    <string name="cuantos_minutos_aviso_antes_toque_de_queda">Cuántos minutos antes del toque de queda debo avisarte?</string>
    <string name="toque_de_queda">Toque de Queda, restando puntos...</string>
    <string name="toque_de_queda_asecas">Toque de Queda</string>
    <string name="minutos_para_toque_de_queda">Minutos para toque de queda</string>
    <string name="toque_de_queda_explicacion_dialogo">El toque de queda es una parte importante para dormir bien por las noches, recomendamos que se inicie al menos 30 minutos antes de ir a dormir, ¿seguro que quieres cambiarlo?</string>
    <string name="desactivado">Desactivado</string>
    <string name="activado">Activado</string>
    <string name="activa_toque_de_queda_switch_texto">Activa el toque de queda para dormir bien</string>
    <string name="apps_neutrales">Apps Neutrales</string>
    <string name="texto_notificacion_toque_de_queda">En toque de queda</string>
    <string name="este_archivo_esta_asociado_a_otra_funcion">No añadido, asociado a otra función</string>
    <string name="apps_grupos_buenos">Grupos Positivos</string>
    <string name="nombre_del_grupo">Nombre Del Grupo</string>
    <string name="apps_en_este_grupo">Aplicaciones en este grupo</string>
    <string name="borrar">Borrar</string>
    <string name="condiciones_para_sumar">Condiciones para sumar puntos</string>
    <string name="plus">+</string>
    <string name="d_de_dias">Días</string>
    <string name="txt">txt</string>
    <string name="sincronizar_con_archivo_txt">Sincronizar Con Archivo TXT</string>
    <string name="tiempo_de_los_ultimos">tiempo de los últimos</string>
    <string name="en_el_archivo">en el archivo</string>
    <string name="limites">Límites</string>
    <string name="controles_aleatorios">Controles aleatorios</string>
    <string name="bloques_de_tiempo">Bloques de tiempo</string>
    <string name="positive_checks">Controles positivos</string>
    <string name="negative_checks">Controles negativos</string>
    <string name="grupos_negativos">Grupos negativos</string>
    <string name="condiciones">Condiciones</string>
    <string name="apps">Apps</string>
    <string name="externo">Externo</string>
</resources>