<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_menu_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:srcCompat="@drawable/ic_turkey_vector" />

            <TextView
                android:id="@+id/text_tiempo_actual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tiempo_restante_00" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/positivas"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/apps_buenas"
                    app:icon="@drawable/plus_circle_multiple"
                    app:layout_constraintEnd_toStartOf="@+id/grupos_positivos"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/grupos_positivos"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/apps_grupos_buenos"
                    app:icon="@drawable/animation_outline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/positivas"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/buttonRandomCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/controles_aleatorios"
                app:icon="@drawable/dice_3" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/negativas"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/apps_malas"
                    app:icon="@drawable/bug"
                    app:layout_constraintEnd_toStartOf="@id/buttonNegativeGroups"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/buttonNegativeGroups"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/grupos_negativos"
                    app:icon="@drawable/animation_outline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/negativas"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <Button
                android:id="@+id/ver_tiempo_doble"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ver_tiempos_consumidos"
                app:icon="@drawable/clock_time_eight" />

            <!--
        <Button
            android:id="@+id/ver_tiempo_positivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ver_tiempo_positivo" />

        <Button
            android:id="@+id/ver_tiempo_negativo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ver_tiempo_negativo" />
            -->

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <Button
                android:id="@+id/to_config_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/boton_configuracion"
                app:icon="@drawable/tools" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <!--
        <Switch
            android:id="@+id/switch_servicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch_service" />
            -->

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>